Added draft implimentation of Front-end

--- a/BackEnd/test.html
+++ b/BackEnd/test.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,6 +11,6 @@
     </label>
     <p id="msg"> </p>
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
-    <script src="clientCreateGame.js"></script>
+    <script src="../FrontEnd/src/index.js"></script>
 </body>
 </html>
