--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -8,6 +8,7 @@
     <title>Naval Battle</title>
 </head>
 <body>
+    <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
     <div id="root">
 
     </div>
